# walmart_shopbot

./: README.md  bot.py  pyproject.toml  settings.ini
