[tool.poetry]
name = "selenium-scrap"
version = "0.1.0"
description = ""
authors = ["Benjamin Ye <benjamin.ye@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
configparser = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
